Fixed styling for cards on tablet view

--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ body {background-color: hsl(0, 0%, 98%);}
 
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1200px) {
 
   .boxes {
     width: 20rem;
